// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainScreen render renders page 1`] = `
<div>
  <div
    class="game-select"
    id="main-screen"
  >
    <div
      class="left-column"
    >
      <h2>
        Game Requests
      </h2>
      <h4>
        <span
          class="subheading-game"
        >
          Type e.g. 
          <b>
            "!request Blather Round"
          </b>
           in 
          sirgoosewell
          's chat to add
        </span>
      </h4>
      <div
        class="left-column-body"
      >
        <div
          class="game"
          id="sidebar"
        >
          <div
            class="sidebar-panel"
          >
            <div
              class="p sidebar-panel-up-next"
            >
               Up Next:
              <p
                class="next-game-name"
              >
                not yet decided
              </p>
              <p
                class="next-game-party-pack"
              >
                <i />
              </p>
              <button
                class="open-seat-requests"
                disabled=""
              >
                OPEN SEAT REQUESTS
              </button>
            </div>
          </div>
          <div
            class="nav-wrapper"
          >
            <button
              class="move-next-game-back"
            >
               ⇦ 
            </button>
            <button
              class="move-next-game-fwd"
            >
               ⇨ 
            </button>
          </div>
          <div
            class="sidebar-panel"
          >
            <p
              class="sidebar-panel-history"
            >
               History 
            </p>
            <p
              class="sidebar-panel-history-list"
            >
              <li>
                No games yet
              </li>
            </p>
          </div>
        </div>
        <div
          class="left-column-inner-body"
        />
      </div>
    </div>
    <div
      class="right-column"
      width="50px"
    >
      <div
        class="wheel-wrapper"
      />
    </div>
  </div>
</div>
`;

exports[`MainScreen render should render the game request screen 1`] = `
<div
  className="game-select"
  id="main-screen"
>
  <MessageHandler
    access_token="foo"
    addGameRequest={[Function]}
    caniplayHandler={[Function]}
    changeNextGameIdx={[Function]}
    channel="sirgoosewell"
    clearQueueHandler={[Function]}
    closeQueueHandler={[Function]}
    messages={
      Object {
        "Survive The Internet (Party Pack 4)": Object {
          "Max players": 8,
          "Min players": 3,
          "Variants": Array [
            "survive",
            "survive the internet",
            "sti",
          ],
          "chosen": false,
          "locked": false,
          "longName": "Survive The Internet (Party Pack 4)",
          "name": "Survive The Internet",
          "partyPack": "Party Pack 4",
          "time": 1627509347466,
          "username": "dcpesses",
        },
      }
    }
    modList={Array []}
    onDelete={[Function]}
    onMessage={[Function]}
    openQueueHandler={[Function]}
    playerExitHandler={[Function]}
    setNextGame={[Function]}
    startGame={[Function]}
    upcomingGames={Array []}
  />
  <div
    className="left-column"
  >
    <h2>
      Game Requests
    </h2>
    <h4>
      <span
        className="subheading-game"
      >
        Type e.g. 
        <b>
          "!request Blather Round"
        </b>
         in 
        sirgoosewell
        's chat to add
      </span>
    </h4>
    <div
      className="left-column-body"
    >
      <Sidebar
        changeNextGameIdx={[Function]}
        history={Array []}
        moveNextGameBack={[Function]}
        moveNextGameFwd={[Function]}
        nextGameIdx={0}
        requestMode="game"
        togglePlayerSelect={[Function]}
      />
      <div
        className="left-column-inner-body"
      >
        <GameRequest
          gameName="Survive The Internet (Party Pack 4)"
          getActivity={[Function]}
          metadata={
            Object {
              "Max players": 8,
              "Min players": 3,
              "Variants": Array [
                "survive",
                "survive the internet",
                "sti",
              ],
              "chosen": false,
              "locked": false,
              "longName": "Survive The Internet (Party Pack 4)",
              "name": "Survive The Internet",
              "partyPack": "Party Pack 4",
              "time": 1627509347466,
              "username": "dcpesses",
            }
          }
          onDelete={[Function]}
          toggleLock={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="right-column"
    width="50px"
  >
    <div
      className="wheel-wrapper"
    >
      <default
        contrastColor="black"
        downDuration={1000}
        fontFamily="Arial"
        isOnlyOnce={false}
        onFinished={[Function]}
        primaryColor="white"
        segColors={
          Array [
            "#99b0fc",
            "#b4a7f2",
            "#beb4f7",
            "#cdc2f9",
            "#aec2f9",
            "#a4d6f9",
          ]
        }
        segments={
          Array [
            "Survive The Internet (Party Pack 4)",
          ]
        }
        size={250}
        upDuration={100}
      />
    </div>
  </div>
  <button
    className="logout"
    onClick={[MockFunction]}
  >
    Logout ➧
  </button>
</div>
`;

exports[`MainScreen render should render the player selection screen 1`] = `
<div
  className="player-select"
  id="main-screen"
>
  <MessageHandler
    access_token="foo"
    addGameRequest={[Function]}
    caniplayHandler={[Function]}
    changeNextGameIdx={[Function]}
    channel="sirgoosewell"
    clearQueueHandler={[Function]}
    closeQueueHandler={[Function]}
    messages={
      Object {
        "Survive The Internet (Party Pack 4)": Object {
          "Max players": 8,
          "Min players": 3,
          "Variants": Array [
            "survive",
            "survive the internet",
            "sti",
          ],
          "chosen": false,
          "locked": false,
          "longName": "Survive The Internet (Party Pack 4)",
          "name": "Survive The Internet",
          "partyPack": "Party Pack 4",
          "time": 1627509347466,
          "username": "dcpesses",
        },
      }
    }
    modList={Array []}
    onDelete={[Function]}
    onMessage={[Function]}
    openQueueHandler={[Function]}
    playerExitHandler={[Function]}
    setNextGame={[Function]}
    startGame={[Function]}
    upcomingGames={Array []}
  />
  <div
    className="left-column"
  >
    <h2>
      Seat Requests
    </h2>
    <h4>
      <span
        className="subheading-player"
      >
        Type 
        <b>
          !new
        </b>
         in 
        sirgoosewell
        's chat if you want to join the next game
      </span>
    </h4>
    <div
      className="left-column-body"
    >
      <Sidebar
        changeNextGameIdx={[Function]}
        history={Array []}
        moveNextGameBack={[Function]}
        moveNextGameFwd={[Function]}
        nextGameIdx={0}
        requestMode="seat"
        togglePlayerSelect={[Function]}
      />
      <div
        className="left-column-inner-body"
      >
        <PlayerSelect
          startGame={[Function]}
        />
      </div>
    </div>
  </div>
  <button
    className="logout"
    onClick={[MockFunction]}
  >
    Logout ➧
  </button>
</div>
`;

exports[`MainScreen renders page 1`] = `
<div>
  <div
    class="game-select"
    id="main-screen"
  >
    <div
      class="left-column"
    >
      <h2>
        Game Requests
      </h2>
      <h4>
        <span
          class="subheading-game"
        >
          Type e.g. 
          <b>
            "!request Blather Round"
          </b>
           in 
          sirgoosewell
          's chat to add
        </span>
      </h4>
      <div
        class="left-column-body"
      >
        <div
          class="game"
          id="sidebar"
        >
          <div
            class="sidebar-panel"
          >
            <div
              class="p sidebar-panel-up-next"
            >
               Up Next:
              <p
                class="next-game-name"
              >
                not yet decided
              </p>
              <p
                class="next-game-party-pack"
              >
                <i />
              </p>
              <button
                class="open-seat-requests"
                disabled=""
              >
                OPEN SEAT REQUESTS
              </button>
            </div>
          </div>
          <div
            class="nav-wrapper"
          >
            <button
              class="move-next-game-back"
            >
               ⇦ 
            </button>
            <button
              class="move-next-game-fwd"
            >
               ⇨ 
            </button>
          </div>
          <div
            class="sidebar-panel"
          >
            <p
              class="sidebar-panel-history"
            >
               History 
            </p>
            <p
              class="sidebar-panel-history-list"
            >
              <li>
                No games yet
              </li>
            </p>
          </div>
        </div>
        <div
          class="left-column-inner-body"
        />
      </div>
    </div>
    <div
      class="right-column"
      width="50px"
    >
      <div
        class="wheel-wrapper"
      />
    </div>
  </div>
</div>
`;

exports[`MainScreen should render the game request screen 1`] = `
<div
  className="game-select"
  id="main-screen"
>
  <MessageHandler
    access_token="foo"
    addGameRequest={[Function]}
    caniplayHandler={[Function]}
    changeNextGameIdx={[Function]}
    channel="sirgoosewell"
    clearQueueHandler={[Function]}
    closeQueueHandler={[Function]}
    messages={
      Object {
        "Survive The Internet (Party Pack 4)": Object {
          "Max players": 8,
          "Min players": 3,
          "Variants": Array [
            "survive",
            "survive the internet",
            "sti",
          ],
          "chosen": false,
          "locked": false,
          "longName": "Survive The Internet (Party Pack 4)",
          "name": "Survive The Internet",
          "partyPack": "Party Pack 4",
          "time": 1627509347466,
          "username": "dcpesses",
        },
      }
    }
    modList={Array []}
    onDelete={[Function]}
    onMessage={[Function]}
    openQueueHandler={[Function]}
    playerExitHandler={[Function]}
    setNextGame={[Function]}
    startGame={[Function]}
    upcomingGames={Array []}
  />
  <div
    className="left-column"
  >
    <h2>
      Game Requests
    </h2>
    <h4>
      <span
        className="subheading-game"
      >
        Type e.g. 
        <b>
          "!request Blather Round"
        </b>
         in 
        sirgoosewell
        's chat to add
      </span>
    </h4>
    <div
      className="left-column-body"
    >
      <Sidebar
        changeNextGameIdx={[Function]}
        history={Array []}
        moveNextGameBack={[Function]}
        moveNextGameFwd={[Function]}
        nextGameIdx={0}
        requestMode="game"
        togglePlayerSelect={[Function]}
      />
      <div
        className="left-column-inner-body"
      >
        <GameRequest
          gameName="Survive The Internet (Party Pack 4)"
          getActivity={[Function]}
          metadata={
            Object {
              "Max players": 8,
              "Min players": 3,
              "Variants": Array [
                "survive",
                "survive the internet",
                "sti",
              ],
              "chosen": false,
              "locked": false,
              "longName": "Survive The Internet (Party Pack 4)",
              "name": "Survive The Internet",
              "partyPack": "Party Pack 4",
              "time": 1627509347466,
              "username": "dcpesses",
            }
          }
          onDelete={[Function]}
          toggleLock={[Function]}
        />
      </div>
    </div>
  </div>
  <div
    className="right-column"
    width="50px"
  >
    <div
      className="wheel-wrapper"
    >
      <default
        contrastColor="black"
        downDuration={1000}
        fontFamily="Arial"
        isOnlyOnce={false}
        onFinished={[Function]}
        primaryColor="white"
        segColors={
          Array [
            "#99b0fc",
            "#b4a7f2",
            "#beb4f7",
            "#cdc2f9",
            "#aec2f9",
            "#a4d6f9",
          ]
        }
        segments={
          Array [
            "Survive The Internet (Party Pack 4)",
          ]
        }
        size={250}
        upDuration={100}
      />
    </div>
  </div>
  <button
    className="logout"
    onClick={[MockFunction]}
  >
    Logout ➧
  </button>
</div>
`;

exports[`MainScreen should render the player selection screen 1`] = `
<div
  className="player-select"
  id="main-screen"
>
  <MessageHandler
    access_token="foo"
    addGameRequest={[Function]}
    caniplayHandler={[Function]}
    changeNextGameIdx={[Function]}
    channel="sirgoosewell"
    clearQueueHandler={[Function]}
    closeQueueHandler={[Function]}
    messages={
      Object {
        "Survive The Internet (Party Pack 4)": Object {
          "Max players": 8,
          "Min players": 3,
          "Variants": Array [
            "survive",
            "survive the internet",
            "sti",
          ],
          "chosen": false,
          "locked": false,
          "longName": "Survive The Internet (Party Pack 4)",
          "name": "Survive The Internet",
          "partyPack": "Party Pack 4",
          "time": 1627509347466,
          "username": "dcpesses",
        },
      }
    }
    modList={Array []}
    onDelete={[Function]}
    onMessage={[Function]}
    openQueueHandler={[Function]}
    playerExitHandler={[Function]}
    setNextGame={[Function]}
    startGame={[Function]}
    upcomingGames={Array []}
  />
  <div
    className="left-column"
  >
    <h2>
      Seat Requests
    </h2>
    <h4>
      <span
        className="subheading-player"
      >
        Type 
        <b>
          !new
        </b>
         in 
        sirgoosewell
        's chat if you want to join the next game
      </span>
    </h4>
    <div
      className="left-column-body"
    >
      <Sidebar
        changeNextGameIdx={[Function]}
        history={Array []}
        moveNextGameBack={[Function]}
        moveNextGameFwd={[Function]}
        nextGameIdx={0}
        requestMode="seat"
        togglePlayerSelect={[Function]}
      />
      <div
        className="left-column-inner-body"
      >
        <PlayerSelect
          startGame={[Function]}
        />
      </div>
    </div>
  </div>
  <button
    className="logout"
    onClick={[MockFunction]}
  >
    Logout ➧
  </button>
</div>
`;
